# python-sandbox

django-basic/: Pipfile  readme.md
django-basic/app/: settings.py
django-basic/config/: settings.py  urls.py
django-basic/polls/: models.py  views.py
django-basic/polls/migrations/: 0001_initial.py
django-basic/polls/templates/polls/: index.html
django-firestore-test/: .gitignore  README.md  pyproject.toml
django-firestore-test/config/settings/: local.py
django-rest-tutorial/: pyproject.toml  readme.md
django-rest-tutorial/config/: settings.py  urls.py
django-rest-tutorial/config/settings/: base.py  local.py
django-rest-tutorial/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
django-rest-tutorial/snippets/migrations/: 0001_initial.py  0002_auto_20200523_1141.py
django-rest-tutorial/snippets/tests/: test_sandbox.py
django-test/: .gitignore  pyproject.toml
django-test/config/: settings.py
django-test/config/settings/: base.py  local.py
djangogirls/: .gitignore  readme.md
djangogirls/blog/: models.py
djangogirls/blog/migrations/: 0001_initial.py
djangogirls/mysite/: settings.py  urls.py
python-remote-container/: .gitignore  Dockerfile  README.md  docker-compose.yml
python-remote-container/.devcontainer/: devcontainer.json
python-remote-container/src/: main.py
python-remote-container/src/effective/02/: 11_slice.py
python-remote-container/src/effective/03/: 19.py  21.py  22.py
python-tutorial/: readme.md
python-tutorial/modules/: __init__.py  fibo.py  klass.py
(+14 files in other folders)
