[tool.poetry]
name = "django-rest-tutorial"
version = "0.1.0"
description = ""
authors = ["zakizaki-ri9 <kic.yuuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
djangorestframework = "^3.11.0"
pygments = "^2.6.1"
django-debug-toolbar = "^2.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
httpie = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

