[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["zakizaki-ri9 <kic.yuuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "=2.2"
google-cloud-firestore = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
